# hetlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  version_config.h.in
.github/workflows/: cmake.yml
cmake/: hetlib-config.cmake.in
cmake/Modules/: variables.cmake
examples/: CMakeLists.txt
examples/src/: pattern_match.cpp
include/: uncommon_definitions.h
include/het/: het.h  het_container.h  het_keyvalue.h  het_value.h  match.h  type_ctors_util.h
include/het/details/: domains.h  error.h  expected.h  match.h  type_ctors_util.h  typesafe.h  uncommon_definitions.h
tests/: CMakeLists.txt
tests/include/: hetero_test.h
tests/src/: hetero_container.cpp  hetero_container_bench.cpp  hetero_copy_test.cpp  hetero_keyvalue.cpp  hetero_keyvalue_bench.cpp  hetero_value.cpp  hetero_value_bench.cpp
